[package]
name = "cenv-wasm"
version = "0.1.0"
authors = ["JonShort <JonShort@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
regex = "1.4"
wasm-bindgen = "0.2"

wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
lto = true
opt-level = 'z'
