[package]
name = "cenv-wasm"
version = "0.1.0"
authors = ["JonShort <JonShort@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cenv_core = "1.0"

wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
opt-level = 'z'
